fixedz-index

--- a/src/sass/components/main/_hero-main.scss
+++ b/src/sass/components/main/_hero-main.scss
@@ -3,6 +3,7 @@
     background-color: getColor('white');
 
     position: relative;
+    z-index: 10;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
